jdk-example/istio-rules/meeting-dest-cb.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: meeting-server
spec:
  host: meeting-server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        maxRequestsPerConnection: 10
        http1MaxPendingRequests: 1024
    outlierDetection:
      http:
        consecutiveErrors: 7
        interval: 5m
        baseEjectionTime: 15m
