jdk-example/istio-rules/meeting-dest.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: meeting-server
spec:
  host: meeting-server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
