jdk-example/istio-rules/meeting-vs-503.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: meeting-server
spec:
  hosts:
  - meeting-server
  http:
  - route:
    - destination:
        host: meeting-server
    fault:
      abort:
        percentage:
          value: 100
        httpStatus: 503
