jdk-example/istio-rules/meeting-vs-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meeting-server
spec:
  hosts:
  - meeting-server
  http:
  - route:
    - destination:
        host: meeting-server
    retries:
      attempts: 3
      perTryTimeout: 2s
