jdk-example/istio-rules/work-v1v2-dest-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: work-server
spec:
  host: work-server
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: latest
  - name: v2
    labels:
      version: "2.0"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: meeting-server
spec:
  host: meeting-server
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
