jdk-example/istio-rules/work-v1v2-dest.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: work-server
spec:
  host: work-server
  subsets:
  - name: v1
    labels:
      version: "latest"
  - name: v2
    labels:
      version: "2.0"
