jdk-example/istio-rules/work-vs-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: work-server
spec:
  hosts:
  - "*"
  gateways:
  - work-gateway
  http:
  - match:
    - uri:
        prefix: /work
    route:
    - destination:
        host: work-server
        subset: v1
      weight: 0
    - destination:
        host: work-server
        subset: v2
      weight: 100
