jdk-example/istio-rules/work-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: work-server
spec:
  hosts:
  - "*"
  gateways:
  - work-gateway
  http:
  - match:
    - uri:
        prefix: /work
    route:
    - destination:
        host: work-server
